--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,6 @@ svg {
   --poppins: "Poppins", sans-serif;
 }
 
-/* html {
-  scroll-behavior: auto;
-} */
-
 body {
   font-family: var(--poppins);
 }
@@ -583,6 +579,12 @@ body {
   opacity: 0.87;
 }
 
+.customAccordion__summary {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
 .customAccordion__title {
   font-size: 24px;
   font-weight: 500;
@@ -680,10 +682,6 @@ body {
 }
 
 .customInput::placeholder {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 28px;
-  color: var(--gray_color);
   padding-left: 32px;
 }
 
