--- a/Alldevice/largeDevice.responsive.css
+++ b/Alldevice/largeDevice.responsive.css
@@ -217,4 +217,9 @@
     font-size: 14px;
     line-height: 18px;
   }
+
+  .reviewPartLeftContent__title {
+    font-size: 24px;
+    line-height: 34px;
+  }
 }
