--- a/Alldevice/mediumDevice.responsive.css
+++ b/Alldevice/mediumDevice.responsive.css
@@ -7,4 +7,15 @@
     --yellow_color: #fcd980;
     --poppins: "Poppins", sans-serif;
   }
+
+  .navbar-toggler:focus {
+    box-shadow: none;
+    border: 1px dashed #ffffff;
+  }
+
+  .customNavLi {
+    text-align: center;
+    background-color: #fcd980;
+    border-radius: 8px;
+  }
 }
