--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ body {
   color: #282938;
   opacity: 0.7;
   padding-bottom: 8px;
-  width: 405px;
+  /* width: 405px; */
 }
 
 .customWork_touch {
